test/spec_vectors/simd_splat/fail/module_23.wat
(module (func $i32x4.splat-arg-empty (result v128) (i32x4.splat)))